fixed L'Oreal image not showing used react-image-gallery to show gallery instead fixed mobile comptability for blog post

--- a/src/components/BlogPost/index.scss
+++ b/src/components/BlogPost/index.scss
@@ -2,6 +2,28 @@
     max-width: 60% !important;
 }
 
+.first-badge {
+    margin-left: auto;
+}
+
+@media (max-width: 1200px) {
+    .blog-post-content {
+        max-width: 70% !important;
+    }
+}
+
+@media (max-width: 991px) {
+    .blog-post-content {
+        max-width: 80% !important;
+    }
+    .first-badge {
+        margin-left: 0;
+    }
+    .last-badge {
+        margin-right: auto;
+    }
+}
+
 .blog-title {
     text-transform: capitalize;
 }
