--- a/src/components/Product/index.scss
+++ b/src/components/Product/index.scss
@@ -1,5 +1,2 @@
 @import '../../App.scss';
-
-.product-carousel {
-    cursor: pointer;
-}
+@import "~react-image-gallery/styles/scss/image-gallery.scss";
